--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,21 @@
 {
-  "name": "Google I/O 2015",
-  "short_name": "I/O 2015",
-  "start_url": "./?utm_source=web_app_manifest",
+  "short_name": "Maps",
+  "name": "Google Maps",
+  "icons": [
+    {
+      "src": "/images/icons-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/images/icons-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": "/maps/?source=pwa",
+  "background_color": "#3367D6",
   "display": "standalone",
-  "dir": "rtl",
-  "lang": "fr",
-  "background_color": "red",
-  "icons": [{
-    "src": "a.png",
-    "sizes": "48x48",
-    "type": "image/png"
-  }, {
-    "src": "b.png",
-    "sizes": "72x72",
-    "type": "image/png"
-  }, {
-    "src": "c.png",
-    "sizes": "96x96",
-    "type": "image/png"
-  }, {
-    "src": "e.png",
-    "sizes": "144x144",
-    "type": "image/png"
-  }, {
-    "src": "f.png",
-    "sizes": "168x168",
-    "type": "image/png"
-  }, {
-    "src": "toast.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }]
-
+  "scope": "/maps/",
+  "theme_color": "#3367D6"
 }
