--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,8 @@
 {
-  "short_name": "Maps",
-  "name": "Google Maps",
-  "icons": [
-    {
-      "src": "/images/icons-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "/images/icons-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": "/maps/?source=pwa",
-  "background_color": "#3367D6",
-  "display": "standalone",
-  "scope": "/maps/",
-  "theme_color": "#3367D6"
+  
+    "short_name": "toast",
+    "name": "toast party",
+    "display": "standalone",
+    "background_color": "#fdfdfd",
+    "theme_color": "#fdfdfd",
 }
