--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 [
 {
-
     "short_name": "toast",
     "name": "toast party",
     "display": "standalone",
-    "theme_color": "rgb(245, 240, 237)",
-}
+    "theme_color": "rgb(245, 240, 237)"
+},
 ]
