--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,8 @@
     "short_name": "toast",
     "name": "toast party",
     "display": "standalone",
-    "theme_color": "rgb(245, 240, 237)"
+    "theme_color": "rgb(245, 240, 237)",
+    "start_url": "/index.html",
+  "background_color": "#3E4EB8",
+  "theme_color": "#2F3BA2"
 }
