--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,17 @@
 {
     "short_name": "toast",
     "name": "toast party",
+    "icons": [{
+        "src": "siren.png",
+        "sizes": "64x64",
+      },{
+        "src": "business.png",
+        "sizes": "128x128"
+      }],
     "display": "standalone",
     "start_url": "/index.html",
-  "theme_color": "#2F3BA2"
+    "theme_color": "#2F3BA2",
+    "scope": "/restaurant.com/",
+    "background_color": "#2F3BA2"
+   },
 }
