--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,22 @@
 {
     "short_name": "toast",
     "name": "toast party",
-    "icons": [{
-        "src": "siren.png",
-        "sizes": "24x24",
-      },{
-        "src": "business.png",
-        "sizes": "16x16"
-      }],
     "display": "standalone",
     "start_url": "/index.html",
     "theme_color": "#2F3BA2",
     "scope": "/restaurant.com/",
-    "background_color": "#2F3BA2"
-   },
-}
+    "background_color": "#2F3BA2",
+    "icons" : [
+       {
+
+        "src": "siren.png",
+        "type":"image/png",
+        "sizes": "24x24"
+      },
+      {
+        "src": "business.png",
+        "type": "image/png",
+        "sizes": "16x16"
+      }
+    ]
+   }
